tv/sonarr-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: tv
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    flame.pawelmalak/type: app
    flame.pawelmalak/name: Serie
    flame.pawelmalak/url: https://sonarr.mdapi.ch
    flame.pawelmalak/category: TV Enrichment
    flame.pawelmalak/icon: television-classic
    flame.pawelmalak/order: '20'
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-signin: https://auth.mdapi.ch/tv/oauth2/start?rd=https://$host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://auth.mdapi.ch/tv/oauth2/auth
    nginx.ingress.kubernetes.io/proxy-body-size: '16m'
spec:
  ingressClassName: nginx
  rules:
    - host: sonarr.mdapi.ch
      http:
        paths:
          - backend:
              service:
                name: sonarr
                port:
                  number: 8989
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - sonarr.mdapi.ch
      secretName: sonarr-cert
